GNOME Bugzilla – Bug 698231
One should not be able to minimize g-i-s window
Last modified: 2013-04-22 15:33:48 UTC
in the context of the setup where there is no dock, if someone right-click on title-bar and choose "Minimize", there is no easy way to get the window back (just alt-tab, which is not the easiest to find)
Version tested: gnome-initial-setup-0.8-3.fc19.x86_64
Not particular to gnome-initial-setup. This applies to your firefox window just as well.
Ok, I didn't noticed there was a firefox window during the process.
You can apparently minimise the window in initial-setup mode as the window manager is running, perhaps in this mode we should gtk_window_set_decorated (window, FALSE)
(In reply to comment #2) > Not particular to gnome-initial-setup. This applies to your firefox window just > as well. Well, there's no overview in initial-setup mode. Let's just disable minimization.
Created attachment 241838 [details] [review] driver: Don't allow the main window to be minimized
Review of attachment 241838 [details] [review]: ok
Review of attachment 241838 [details] [review]: ::: gnome-initial-setup/gis-driver.c @@ +239,3 @@ + window = gtk_widget_get_window (GTK_WIDGET (priv->main_window)); + /* disable minimize */ + gdk_window_set_functions (window, GDK_FUNC_ALL | GDK_FUNC_MINIMIZE); Uh, doesn't this need to be GDK_FUNC_ALL & ~GDK_FUNC_MINIMIZE ?
https://developer.gnome.org/gdk/2.22/gdk-Windows.html#gdk-window-set-functions says "The functions argument is the logical OR of values from the GdkWMFunction enumeration. If the bitmask includes GDK_FUNC_ALL, then the other bits indicate which functions to disable; if it doesn't include GDK_FUNC_ALL, it indicates which functions to enable." So it probably should be a logical OR not bitwise infact
no, bitwise was quite ok
Is this back to accept commit now then?
Yeah, I misunderstood the terrible API.
Pushed 0d7573a49c0439c6fa53cc736bf588542d53ab3f