driver: Don't allow the main window to be minimized

This is especially important when running in a gnome-shell initial-setup
mode.

https://bugzilla.gnome.org/show_bug.cgi?id=698231