gnome-initial-setup/gis-driver.c
@@ -232,6 +232,16 @@ gis_driver_activate (GApplication *app)
 }
 
 static void
+window_realize_cb (GtkWidget *widget, gpointer user_data)
+{
+  GisDriverPrivate *priv = GIS_DRIVER (user_data)->priv;
+  GdkWindow *window;
+  window = gtk_widget_get_window (GTK_WIDGET (priv->main_window));
+  /* disable minimize */
+  gdk_window_set_functions (window, GDK_FUNC_ALL | GDK_FUNC_MINIMIZE);
+}
+
+static void
 gis_driver_startup (GApplication *app)
 {
   GisDriver *driver = GIS_DRIVER (app);
@@ -248,6 +258,11 @@ gis_driver_startup (GApplication *app)
                                     "resizable", FALSE,
                                     "window-position", GTK_WIN_POS_CENTER_ALWAYS,
                                     NULL);
+
+  g_signal_connect (priv->main_window,
+                    "realize",
+                    G_CALLBACK (window_realize_cb),
+                    (gpointer)app);
 
   priv->assistant = g_object_new (get_assistant_type (), NULL);
   gtk_container_add (GTK_CONTAINER (priv->main_window), GTK_WIDGET (priv->assistant));
